--- a/main.html
+++ b/main.html
@@ -3,13 +3,54 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+  <!-- the entire body must be written by student -->
+  <form method="post" >
+    <label for="name">Name*</label>
+    <input type="text" id="name" required ><br>
+
+    <label for="email">Email*</label>
+    <input type="email" id="email" required><br>
+
+    <label>Gender*</label>
+    <input type="radio" id="gender_m" name="gender" value="Male" required>
+    <label for="gender_m">Male</label>
+    <input type="radio" id="gender_f" name="gender" value="Female" required>
+    <label for="gender_f">Female</label><br>
+
+
+    <label for="laptop">Laptop Brands</label>
+    <select id="laptop">
+      <option value="" disabled selected>Please choose an option</option>
+      <option value="Apple">Apple</option>
+      <option value="Asus">Asus</option>
+      <option value="HP">HP</option>
+    </select><br>
+
+    <label for="age">Age*</label>
+    <input type="number" id="age" required><br>
+
+    <label for="dob">Date of Birth*</label>
+    <input type="date" id="dob"  required><br>
+
+    <label for="password">Password*</label>
+    <input type="password" id="password" required ><br>
+
+    <label for="portfolio">Portfolio URL</label>
+    <input id="URL" id="portfolio"><br>
+
+    <button type="submit" id="portfolio">Submit</button>
+
+
+
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
+  </form>
+
+  </script>
 
 </body>
 
