--- a/main.html
+++ b/main.html
@@ -15,16 +15,16 @@
     <label for="email">Email*</label>
     <input type="email" id="email" required><br>
 
-    <label>Gender*</label>
-    <input type="radio" id="gender_m" name="gender" value="Male" required>
+    <label>gender*</label>
+    <input type="radio" name="gender" required>
     <label for="gender_m">Male</label>
-    <input type="radio" id="gender_f" name="gender" value="Female" required>
+    <input type="radio" name="gender" required>
     <label for="gender_f">Female</label><br>
 
 
-    <label for="laptop">Laptop Brands</label>
+    <label for="laptop">Laptop</label>
     <select id="laptop">
-      <option value="" disabled selected>Please choose an option</option>
+     
       <option value="Apple">Apple</option>
       <option value="Asus">Asus</option>
       <option value="HP">HP</option>
