--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -8,23 +7,21 @@
 
 <body>
   <!-- the entire body must be written by student -->
-  <form method="post" >
+  <form method="post">
     <label for="name">Name*</label>
-    <input type="text" id="name" required ><br>
+    <input type="text" id="name" required><br>
 
     <label for="email">Email*</label>
     <input type="email" id="email" required><br>
 
-    <label>gender*</label>
-    <input type="radio" name="gender" required>
+    <label>Gender*</label>
+    <input type="radio" name="gender" id="gender_m" required>
     <label for="gender_m">Male</label>
-    <input type="radio" name="gender" required>
+    <input type="radio" name="gender" id="gender_f" required>
     <label for="gender_f">Female</label><br>
-
 
     <label for="laptop">Laptop</label>
     <select id="laptop">
-     
       <option value="Apple">Apple</option>
       <option value="Asus">Asus</option>
       <option value="HP">HP</option>
@@ -34,23 +31,19 @@
     <input type="number" id="age" required><br>
 
     <label for="dob">Date of Birth*</label>
-    <input type="date" id="dob"  required><br>
+    <input type="date" id="dob" required><br>
 
     <label for="password">Password*</label>
-    <input type="password" id="password" required ><br>
+    <input type="password" id="password" required><br>
 
     <label for="portfolio">Portfolio URL</label>
-    <input id="URL" id="portfolio"><br>
+    <input id="portfolio_url"><br>
 
-    <button type="submit" id="portfolio">Submit</button>
-
-
+    <button type="submit" id="submit_button">Submit</button>
 
     <script type="text/javascript" src="./script.js">
     </script>
   </form>
-
-  </script>
 
 </body>
 
