--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
     <input type="password" id="password" required><br>
 
     <label for="portfolio">Portfolio URL</label>
-    <input id="portfolio_url"><br>
+    <input type="url" id="portfolio_url"><br>
 
     <button type="submit" id="submit_button">Submit</button>
 
