--- a/main.html
+++ b/main.html
@@ -37,12 +37,11 @@
     <input type="password" id="password" required><br>
 
     <label for="portfolio">Portfolio URL</label>
-    <input type="url" id="portfolio_url"><br>
+    <input type="url" id="portfolio"><br>
 
     <button type="submit" id="submit_button">Submit</button>
 
-    <script type="text/javascript" src="./script.js">
-    </script>
+   
   </form>
 
 </body>
